--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
     "start": "node dist/server.js",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm install && npm run build"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -33,6 +34,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0"
   }
