--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "src": "src/server.ts",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": ["src/**"]
+            }
         }
     ],
     "routes": [
@@ -11,5 +14,8 @@
             "src": "/(.*)",
             "dest": "src/server.ts"
         }
-    ]
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
 }
