--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "vercel-build": "npm install && npm run build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -40,5 +41,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
